--- a/original.html
+++ b/original.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta charset="UTF-8">
-  <meta name="google" content="notranslate"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="/drawdown.js"></script>
   
-  <script src="drawdown.js"></script>
-  
-  <style type="text/css">
+  <style>
     * {
       box-sizing: border-box;
     }
@@ -80,7 +78,6 @@
       line-height: 1.3;
     }
   </style>
-  <title>drawdown test</title>
 </head>
 <body>
   <textarea class="plain">
