--- a/original.html
+++ b/original.html
@@ -74,7 +74,7 @@
       .plain,
       .markdown {
         position: absolute;
-        width: 50%;
+        width: 100%;
         height: 100%;
         margin: 0;
       }
@@ -86,10 +86,11 @@
         font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
         font-size: 12px;
         resize: none;
+        visibility: hidden;
       }
 
       .markdown {
-        left: 50%;
+        left: 0%;
         padding: 0 0 0 12px;
         overflow: auto;
         font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
