--- a/original.html
+++ b/original.html
@@ -12,15 +12,6 @@
         box-sizing: border-box;
       }
 
-      html,
-      body {
-        width: 100%;
-        height: 100%;
-        padding: 0;
-        margin: 0;
-        overflow: hidden;
-      }
-
       hr {
         margin: 1em 0;
         border: 0;
@@ -72,26 +63,11 @@
         max-width: 96px;
       }
 
-      .plain,
-      .markdown {
+      #markdown {
         position: absolute;
         width: 100%;
         height: 100%;
         margin: 0;
-      }
-
-      .plain {
-        border: 0;
-        border-right: 1px solid #000;
-        padding: 12px;
-        font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
-        font-size: 12px;
-        resize: none;
-        visibility: hidden;
-      }
-
-      .markdown {
-        left: 0%;
         padding: 0 0 0 12px;
         overflow: auto;
         font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
@@ -103,7 +79,7 @@
   </head>
 
   <body>
-    <div class="markdown"></div>
+    <div id="markdown"></div>
     <script>
       // namespace issue
       parser = markdown
@@ -116,7 +92,7 @@
       }
 
       request((markdown) => {
-        $('.markdown').html(parser(markdown))
+        $('#markdown').html(parser(markdown))
       })
     </script>
   </body>
