--- a/original.html
+++ b/original.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script src="/drawdown.js"></script>
+    <script src="drawdown.js"></script>
 
     <style>
       * {
