--- a/original.html
+++ b/original.html
@@ -21,7 +21,7 @@
       blockquote {
         margin-left: 0;
         padding: 0.5em 0 0.5em 2em;
-        border-left: 3px solid rgb(211, 218, 234);
+        border-left: 3px solid #d3daea;
       }
 
       li,
@@ -34,7 +34,7 @@
       }
 
       code {
-        background: rgba(211, 218, 234, 0.25);
+        background: #d3daea40;
       }
 
       pre>code {
@@ -52,7 +52,7 @@
       }
 
       tr:nth-child(2n) {
-        background: #f3f3f3;
+        background: #f2f2f2;
       }
 
       th {
