--- a/original.html
+++ b/original.html
@@ -8,10 +8,6 @@
     <script src="drawdown.js"></script>
 
     <style>
-      * {
-        box-sizing: border-box;
-      }
-
       hr {
         margin: 1em 0;
         border: 0;
@@ -52,26 +48,19 @@
       }
 
       tr:nth-child(2n) {
-        background: #f2f2f2;
+        background: #f3f3f3;
       }
 
       th {
         border-bottom: 1px solid #aaa;
       }
 
-      img {
-        max-width: 96px;
-      }
-
       #markdown {
-        position: absolute;
-        width: 100%;
-        height: 100%;
         margin: 0;
-        padding: 0 0 0 12px;
+        padding: 0.5em;
         overflow: auto;
         font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
-        font-size: 14px;
+        font-size: 1em;
         line-height: 1.3;
       }
     </style>
