--- a/original.html
+++ b/original.html
@@ -14,9 +14,8 @@
         --code-color: #d3daea40;
         --row-2n-color: #f3f3f3;
         --table-color: #aaaaaa;
-        background-color: #ffffff;
+        --main-bg-color: #ffffff;
         --link-color: #1671dc;
-        --used-link-color: ;
         color: #24292f;
       }
 
@@ -27,18 +26,18 @@
           --code-color: #161b22;
           --row-2n-color: #161b22;
           --table-color: #aaaaaa;
-          background-color: #0d1117;
+          --main-bg-color: #0d1117;
           color: #c9d1d9;
         }
+      }
+
+      body {
+        background-color: var(--main-bg-color);
       }
 
       a {
         color: var(--link-color);
         text-decoration: none;
-      }
-
-      a:visited {
-        color: var(--used-link-color);
       }
 
       a:hover {
