--- a/original.html
+++ b/original.html
@@ -77,7 +77,7 @@
 
       pre>code {
         display: block;
-        padding: 0.5em 4em;
+        padding: 1em;
         background: var(--code-color);
       }
 
