--- a/original.html
+++ b/original.html
@@ -102,7 +102,7 @@
         margin: 0;
         padding: 0.5em;
         overflow: auto;
-        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
+        font-family: Segoe UI, Helvetica, Arial, sans-serif;
         font-size: 1em;
         line-height: 1.3;
       }
