--- a/original.html
+++ b/original.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!--jquery-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
     <!--drawdown | markdown rendering-->
     <script src="drawdown.js"></script>
 
@@ -145,10 +148,7 @@
         return path
       }
 
-      async function getMd() {
-        // Get markdown element
-        const markdown = document.querySelector('#markdown');
-
+      function getQueryPath() {
         // Gets URL parameters 
         const queryString = window.location.search;
         const urlParams = new URLSearchParams(queryString);
@@ -160,18 +160,39 @@
           path = checkPath(urlParams.get('path'));
         }
 
-        // Check if path is valid 
-        console.log(path);
-        if (path === null) {
-          markdown.innerHTML = parser(await getText('README.md'));
-        } else {
-          markdown.innerHTML = parser(await getText(path));
-        }
-        renderLatex(document.body)
+        // if empty: path -> null
+        return path
       }
 
-      getMd();
+      async function getMd(path) {
+        // Get markdown element
+        const markdown = document.querySelector('#markdown');
+        markdown.innerHTML = parser(await getText(path));
 
+        $('a[href]').click(function (e) {
+          let link = new URL(this.href);
+          // if same domain
+          if (link.hostname !== window.location.hostname) {
+            return
+          }
+          // if markdown
+          if (!checkPath(link.pathname)) {
+            return
+          }
+          // open markdown
+          e.preventDefault()
+          link = new URL(window.location.href.replace(window.location.search, '') + '?path=' + link.pathname)
+          window.open(link, '_self');
+        })
+        renderLatex(document.body);
+      }
+
+      let path = getQueryPath();
+      if (path === null) {
+        getMd('README.md');
+      } else {
+        getMd(path);
+      }
     </script>
   </body>
 
