--- a/md.html
+++ b/md.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
+  <!--wmartinmimi/md.html-->
+  <!--MIT Licensed https://github.com/wmartinmimi/md.html/blob/main/LICENSE-->
 
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--jquery-->
+    <!--MIT Licensed https://github.com/jquery/jquery/blob/main/LICENSE.txt-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
     <!--drawdown | markdown rendering-->
+    <!--MIT Licensed https://github.com/adamvleggett/drawdown/blob/master/LICENSE-->
     <script src="drawdown.js"></script>
 
     <!--katex | latex rendering-->
+    <!--MIT Licensed https://github.com/KaTeX/KaTeX/blob/main/LICENSE-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css"
       integrity="sha384-vKruj+a13U8yHIkAyGgK1J3ArTLzrFGBbBc0tDp4ad/EyewESeXE/Iv67Aj8gKZ0" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js"
