--- a/md.html
+++ b/md.html
@@ -38,6 +38,7 @@
         --link-color: #1671dc;
         --inline-code-color: #eff1f3;
         color: #24292f;
+        font-family: Segoe UI, Helvetica, Arial, sans-serif;
       }
 
       @media (prefers-color-scheme: dark) {
@@ -90,6 +91,7 @@
       }
 
       code {
+        font-family: 'Courier New', Courier, monospace;
         background-color: var(--inline-code-color);
         padding: 3px;
         padding-left: 5px;
@@ -124,7 +126,6 @@
         margin: 0;
         padding: 0.5em;
         overflow: auto;
-        font-family: Segoe UI, Helvetica, Arial, sans-serif;
         font-size: 1em;
         line-height: 1.3;
       }
@@ -172,11 +173,10 @@
 
       async function renderMd(path) {
         // Get markdown element
-        const markdown = document.querySelector('#markdown');
-        markdown.innerHTML = parser(await getText(path));
+        $('#markdown').html(parser(await getText(path)));
 
         // dynamic title
-        document.title = $('h1').first().text();
+        document.title = $('#markdown>h1').first().text();
 
         $('a[href]').click(function (e) {
           let link = new URL(this.href);
