--- a/md.html
+++ b/md.html
@@ -199,12 +199,12 @@
       async function main() {
         let path = getQueryPath();
         if (path === null) {
-          let response = await fetch('index.md');
+          let response = await fetch('/index.md');
           if (response.ok) {
-            renderMd('index.md');
+            renderMd('/index.md');
             return;
           } else {
-            renderMd('README.md');
+            renderMd('/README.md');
             return;
           }
         } else {
