--- a/md.html
+++ b/md.html
@@ -101,6 +101,7 @@
 
       pre>code {
         display: block;
+        overflow-y: auto;
         padding: 1em;
         background: var(--code-color);
       }
