moved code blocks to md.html

--- a/md.html
+++ b/md.html
@@ -58,6 +58,21 @@
         }
       }
 
+      code {
+        font-family: 'Courier New', Courier, monospace;
+        background-color: var(--inline-code-color);
+        padding: 3px;
+        padding-left: 5px;
+        padding-right: 5px;
+        border-radius: 5px;
+      }
+
+      pre>code {
+        display: block;
+        padding: 1em;
+        background: var(--code-color);
+      }
+
       body {
         background-color: var(--main-bg-color);
       }
