--- a/md.html
+++ b/md.html
@@ -13,7 +13,7 @@
 
     <!--drawdown | markdown rendering-->
     <!--MIT Licensed https://github.com/adamvleggett/drawdown/blob/master/LICENSE-->
-    <script src="drawdown.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/wmartinmimi/md.html@v1.0/drawdown.js"></script>
 
     <!--katex | latex rendering-->
     <!--MIT Licensed https://github.com/KaTeX/KaTeX/blob/main/LICENSE-->
@@ -26,7 +26,10 @@
       integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05"
       crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="syntaxhighlight.css">
+    <!--MIT Licensed https://github.com/Yukaii/github-highlightjs-themes-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wmartinmimi/md.html@v1.0/syntaxhighlight.css">
+
+    <!--BSD 3-Clause Licensed https://github.com/highlightjs/highlight.js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 
     <style>
