link directly to license

--- a/md.html
+++ b/md.html
@@ -29,7 +29,7 @@
     <!--MIT Licensed https://github.com/Yukaii/github-highlightjs-themes-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wmartinmimi/md.html@v1.0/syntaxhighlight.css">
 
-    <!--BSD 3-Clause Licensed https://github.com/highlightjs/highlight.js-->
+    <!--BSD 3-Clause Licensed https://github.com/highlightjs/highlight.js/blob/main/LICENSE-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 
     <style>
