Close popup once a save option is chosen

--- a/md.html
+++ b/md.html
@@ -382,6 +382,8 @@
 
         } else { return; }
 
+        popup.style.visibility = "hidden";
+        popupOverlay.style.visibility = "hidden";
         downloadLink.click();
       }
 
