--- a/md.html
+++ b/md.html
@@ -154,7 +154,7 @@
         visibility: hidden;
         position: absolute;
         height: 100vh;
-        width: 100vw;
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -166,7 +166,7 @@
         visibility: hidden;
         position: absolute;
         height: 100vh;
-        width: 100vw;
+        width: 100%;
         opacity: 100%;
         display: flex;
         align-items: center;
