--- a/md-edit.html
+++ b/md-edit.html
@@ -13,7 +13,7 @@
 
     <!--drawdown | markdown rendering-->
     <!--MIT Licensed https://github.com/adamvleggett/drawdown/blob/master/LICENSE-->
-    <script src="https://cdn.jsdelivr.net/gh/wmartinmimi/md.html@v1.0/drawdown.js"></script>
+    <script src="drawdown.js"></script>
 
     <!--katex | latex rendering-->
     <!--MIT Licensed https://github.com/KaTeX/KaTeX/blob/main/LICENSE-->
@@ -27,7 +27,7 @@
       crossorigin="anonymous"></script>
 
     <!--MIT Licensed https://github.com/Yukaii/github-highlightjs-themes-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wmartinmimi/md.html@v1.0/syntaxhighlight.css">
+    <link rel="stylesheet" href="syntaxhighlight.css">
 
     <!--BSD 3-Clause Licensed https://github.com/highlightjs/highlight.js/blob/main/LICENSE-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
