--- a/md.html
+++ b/md.html
@@ -17,28 +17,17 @@
 
     <!--katex | latex rendering-->
     <!--MIT Licensed https://github.com/KaTeX/KaTeX/blob/main/LICENSE-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css"
-      integrity="sha384-vKruj+a13U8yHIkAyGgK1J3ArTLzrFGBbBc0tDp4ad/EyewESeXE/Iv67Aj8gKZ0"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css"
+      integrity="sha384-vKruj+a13U8yHIkAyGgK1J3ArTLzrFGBbBc0tDp4ad/EyewESeXE/Iv67Aj8gKZ0" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js"
       integrity="sha384-PwRUT/YqbnEjkZO0zZxNqcxACrXe+j766U2amXcgMg5457rve2Y7I6ZJSm2A0mS4"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/contrib/auto-render.min.js"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/contrib/auto-render.min.js"
       integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
 
     <!--MIT Licensed https://github.com/Yukaii/github-highlightjs-themes-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/wmartinmimi/md.html@v1.0/syntaxhighlight.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wmartinmimi/md.html@v1.0/syntaxhighlight.css" />
 
     <!--BSD 3-Clause Licensed https://github.com/highlightjs/highlight.js/blob/main/LICENSE-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
@@ -81,7 +70,7 @@
         border-radius: 5px;
       }
 
-      pre > code {
+      pre>code {
         display: block;
         overflow: auto;
         padding: 1em;
@@ -309,8 +298,8 @@
           e.preventDefault();
           link = new URL(
             window.location.href.replace(window.location.search, "") +
-              "?path=" +
-              link.pathname
+            "?path=" +
+            link.pathname
           );
           window.open(link, "_self");
         });
@@ -323,10 +312,10 @@
         if (path === null) {
           let response = await fetch("/index.md");
           if (response.ok) {
-            renderMd("/index.md");
+            window.location.replace(window.location.pathname + "?path=/index.md");
             return;
           } else {
-            renderMd("/README.md");
+            window.location.replace(window.location.pathname + "?path=/README.md");
             return;
           }
         } else {
@@ -362,7 +351,6 @@
       function downloadFile(fileType) {
         const downloadLink = document.createElement("a");
         if (fileType == "markdown") {
-          if (filePath == null) { return; }
           downloadLink.href = filePath;
           // Name the file 
           if (getFileName() !== false) { downloadLink.download = `${getFileName()}.md`; }
@@ -373,8 +361,7 @@
           const dataURI = "data:text/html," + encodeURIComponent(html);
           downloadLink.href = dataURI;
           // Name the file 
-          if (getFileName() !== false) { downloadLink.download = `${getFileName()}.html`; }
-          else { downloadLink.download = 'download.html'; }
+          downloadLink.download = `${getFileName()}.html`
 
         } else if (fileType == "both") {
           downloadFile("markdown");
@@ -412,12 +399,6 @@
           popup.style.top = window.scrollY + 'px';
           popupOverlay.style.top = window.scrollY + 'px';
           document.querySelector('body').style.overflowY = 'hidden';
-          if (filePath == null) {
-            saveMarkdown = document.querySelector('#save-md');
-            saveMarkdown.style.backgroundColor = 'var(--quote-text-color)';
-            saveMarkdown.style.border = 'none';
-            saveMarkdown.style.cursor = 'not-allowed';
-          }
         }
       });
 
@@ -439,4 +420,5 @@
       main();
     </script>
   </body>
+
 </html>
