--- a/md.html
+++ b/md.html
@@ -171,7 +171,7 @@
         padding: 0 1rem 1rem 1rem;
         border-radius: 10px;
         margin-bottom: 5rem;
-        background: white;
+        background: var(--main-bg-color);
       }
 
       .popup span {
@@ -190,9 +190,9 @@
         font-size: 100%;
         width: 10rem;
         height: 30px;
-        color: white;
-        background-color: #24292f;
+        background-color: var(--code-color);
         border-radius: 5px;
+        border-color: var(--quote-line-color);
       }
 
       .buttons-container button:hover {
