--- a/md.html
+++ b/md.html
@@ -13,7 +13,7 @@
 
     <!--drawdown | markdown rendering-->
     <!--MIT Licensed https://github.com/adamvleggett/drawdown/blob/master/LICENSE-->
-    <!--<script src="https://cdn.jsdelivr.net/gh/wmartinmimi/md.html@v1.0/drawdown.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/gh/wmartinmimi/md.html@v1.0/drawdown.js"></script>
 
     <!--katex | latex rendering-->
     <!--MIT Licensed https://github.com/KaTeX/KaTeX/blob/main/LICENSE-->
