removed unecessary logging

--- a/md-new.html
+++ b/md-new.html
@@ -37,7 +37,7 @@
           let js = document.createElement("script");
           js.src = url;
           js.async = false;
-          js.defer = false;
+          js.defer = true;
           document.head.appendChild(js);
         }
 
