--- a/md-new.html
+++ b/md-new.html
@@ -10,13 +10,7 @@
 
   <body>
     <p id="js_required_warning">This is a markdown viewer that requires javascript to be enabled.</p>
-    <section id="popup-overlay">
-      <div class="popup">
-        <span id="exit-popup">X</span>
-        <h3>Save File</h3>
-        <div class="buttons-container"></div>
-      </div>
-    </section>
+    <section id="popup-overlay"></section>
     <div id="markdown"></div>
     <script>
       async function main() {
