--- a/md-new.html
+++ b/md-new.html
@@ -2,6 +2,8 @@
 <html>
   <!--wmartinmimi/md.html-->
   <!--MIT Licensed https://github.com/wmartinmimi/md.html/blob/main/LICENSE-->
+  <!--other licenses from imported library will be displayed in browser console,
+     and also availble in https://github.com/wmartinmimi/md.html/licenses.json-->
 
   <head>
     <meta charset="UTF-8" />
@@ -19,6 +21,16 @@
         let response = await fetch('development.json');
         let json = await response.json();
         console.log(json);
+
+        response = await fetch(json.licenses);
+        let licenses = await response.json();
+        for (license of licenses){
+          let output = "Library: " + license.name;
+          output += "\nLicense type: " + license.type;
+          output += "\nLicense url: " + license.url;
+          console.log(output)
+        }
+        console.log("License json available at: " + json.licenses);
 
         for (url of json.js) {
           let js = document.createElement("script");
